Minor changes according to java 10